--- a/package.json
+++ b/package.json
@@ -3,23 +3,71 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
-    "build": "next build",
+    "build": "contentlayer build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.4",
-    "@types/react-dom": "18.2.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tremor/react": "^3.2.2",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
-    "next": "13.3.4",
-    "postcss": "8.4.23",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "contentlayer": "^0.3.3",
+    "date-fns": "^2.30.0",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
+    "ethers": "^6.6.0",
+    "framer-motion": "^10.12.16",
+    "keccak256": "^1.0.6",
+    "lucide-react": "^0.245.0",
+    "merkletreejs": "^0.3.10",
+    "next": "13.4.6",
+    "next-contentlayer": "^0.3.3",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-archer": "^4.2.3",
     "react-dom": "18.2.0",
+    "react-tweet": "^2.0.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^2.1.0",
+    "rehype-pretty-code": "^0.9.8",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "server-only": "^0.0.1",
+    "shiki": "^0.14.2",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-radix": "^2.8.0",
+    "tailwindcss-radix-colors": "^0.3.1",
+    "tocbot": "^4.21.0",
+    "typescript": "5.1.3",
+    "viem": "^1.0.7",
+    "wagmi": "^1.2.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+    "@radix-ui/colors": "^0.1.8",
+    "@tailwindcss/typography": "^0.5.9",
+    "eslint-config-kentcdodds": "^20.5.0",
+    "eslint-plugin-import-access": "^1.1.2",
+    "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
