--- a/package.json
+++ b/package.json
@@ -4,78 +4,81 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "next dev && contentlayer build",
-    "build": "contentlayer build && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint ./src --fix"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@prisma/client": "5.12.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/themes": "^1.1.2",
-    "@tremor/react": "^3.6.6",
-    "@types/node": "20.5.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.0.2",
-    "autoprefixer": "10.4.15",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/themes": "^3.0.2",
+    "@tremor/react": "^3.15.0",
+    "@vercel/analytics": "^1.2.2",
+    "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
-    "date-fns": "^2.30.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "ethers": "^6.7.1",
-    "framer-motion": "^10.16.1",
-    "hastscript": "^8.0.0",
+    "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
+    "eslint-config-next": "14.2.3",
+    "ethers": "^6.11.1",
+    "framer-motion": "^11.0.25",
+    "hastscript": "^9.0.0",
     "keccak256": "^1.0.6",
-    "lucide-react": "^0.269.0",
-    "merkletreejs": "^0.3.10",
-    "next": "13.4.19",
-    "next-contentlayer": "^0.3.4",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
+    "lucide-react": "^0.365.0",
+    "merkletreejs": "^0.3.11",
+    "next": "14.2.3",
+    "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.3.0",
+    "postcss": "8.4.38",
+    "react": "^18",
     "react-archer": "^4.3.0",
-    "react-dom": "18.2.0",
-    "react-tweet": "^3.1.1",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-external-links": "^2.1.0",
-    "rehype-pretty-code": "^0.10.0",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
+    "react-dom": "^18",
+    "react-tweet": "^3.2.1",
+    "rehype-external-links": "^3.0.0",
     "server-only": "^0.0.1",
-    "shiki": "^0.14.3",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "tailwindcss-radix": "^2.8.0",
-    "tailwindcss-radix-colors": "^0.5.1",
-    "tocbot": "^4.21.1",
-    "typescript": "5.1.6",
-    "viem": "^1.7.0",
-    "wagmi": "^1.3.10"
+    "sugar-high": "^0.6.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "3.4.3",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-radix": "^3.0.3",
+    "tailwindcss-radix-colors": "^1.2.0",
+    "tocbot": "^4.27.19",
+    "viem": "^2.9.13",
+    "wagmi": "^2.5.19"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
-    "@radix-ui/colors": "^2.1.0",
-    "@tailwindcss/typography": "^0.5.9",
-    "eslint-config-kentcdodds": "^20.5.0",
+    "@faker-js/faker": "^8.4.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@radix-ui/colors": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-kentcdodds": "^21.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-access": "^2.0.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "tailwind-scrollbar": "^3.0.5"
+    "eslint-plugin-import-access": "^2.1.2",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "prisma": "^5.12.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.3",
+    "typescript": "^5"
   }
 }
