--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^18",
     "react-archer": "^4.3.0",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "react-tweet": "^3.2.1",
     "rehype-external-links": "^3.0.0",
     "server-only": "^0.0.1",
