--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-tweet": "^3.2.1",
     "rehype-external-links": "^3.0.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
     "sugar-high": "^0.6.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.4.3",
