--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+.pnpm/install-state.gz
 
 # testing
 /coverage
@@ -22,8 +23,8 @@
 
 # debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+pnpm-error.log*
 
 # local env files
 *.local.*
