--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint ./src --fix"
+    "lint:debug": "eslint ./src --debug",
+    "lint:fix": "next lint && eslint ./src --fix",
+    "lint": "eslint .",
+    "typecheck": "tsc",
+    "setup": "yarn build && prisma generate && prisma migrate deploy && prisma db seed"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
