--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,11 @@ jobs:
           node-version: 20
           cache: "pnpm"
 
-      - name: 📥 Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8.0.0 # 必要に応じてpnpmのバージョンを指定
+      - name: 📥 Install pnpm
+        run: npm install -g pnpm@8.0.0 # 必要に応じてpnpmのバージョンを指定
+
+      - name: 🖥️ Verify pnpm Installation
+        run: pnpm --version
 
       - name: 📥 Install dependencies
         run: pnpm install
@@ -55,10 +56,11 @@ jobs:
           node-version: 20
           cache: "pnpm"
 
-      - name: 📥 Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8.0.0 # 必要に応じてpnpmのバージョンを指定
+      - name: 📥 Install pnpm
+        run: npm install -g pnpm@8.0.0 # 必要に応じてpnpmのバージョンを指定
+
+      - name: 🖥️ Verify pnpm Installation
+        run: pnpm --version
 
       - name: 📥 Install dependencies
         run: pnpm install
@@ -68,96 +70,6 @@ jobs:
 
       - name: 🔎 Type check
         run: pnpm run typecheck
-
-  # vitest:
-  #   name: ⚡ Vitest
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - name: ⬇️ Checkout repo
-  #       uses: actions/checkout@v4
-
-  #     - name: ⎔ Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
-  #         cache: 'pnpm'
-
-  #     - name: 📥 Setup pnpm
-  #       uses: pnpm/action-setup@v2
-  #       with:
-  #         version: 8.0.0
-
-  #     - name: 📥 Install dependencies
-  #       run: pnpm install
-
-  #     - name: 🏄 Copy test env vars
-  #       run: cp .env.example .env .local.env
-
-  #     # - name: 🖼 Build icons
-  #     #   run: pnpm build:icons
-
-  #     - name: ⚡ Run vitest
-  #       run: pnpm test -- --coverage
-
-  # playwright:
-  #   name: 🎭 Playwright
-  #   runs-on: ubuntu-22.04
-  #   timeout-minutes: 60
-  #   steps:
-  #     - name: ⬇️ Checkout repo
-  #       uses: actions/checkout@v4
-
-  #     - name: 🏄 Copy test env vars
-  #       run: cp .env.example .env
-
-  #     - name: ⎔ Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
-  #         cache: 'pnpm'
-
-  #     - name: 📥 Setup pnpm
-  #       uses: pnpm/action-setup@v2
-  #       with:
-  #         version: 8.0.0
-
-  #     - name: 📥 Install dependencies
-  #       run: pnpm install
-
-  #     - name: 📥 Install Playwright Browsers
-  #       run: pnpm run test:e2e:install
-
-  #     - name: 🛠 Setup Database
-  #       run: pnpx prisma migrate deploy
-
-  #     - name: 🏦 Cache Database
-  #       id: db-cache
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: prisma/data.db
-  #         key: |
-  #           db-cache-schema_${{ hashFiles('./prisma/schema.prisma') }}
-  #           -migrations_${{ hashFiles('./prisma/migrations/*/migration.sql') }}
-
-  #     - name: 🌱 Seed Database
-  #       if: steps.db-cache.outputs.cache-hit != 'true'
-  #       run: pnpx prisma db seed
-  #       env:
-  #         MINIMAL_SEED: true
-
-  #     - name: 🏗 Build
-  #       run: pnpm run build
-
-  #     - name: 🎭 Playwright tests
-  #       run: pnpx playwright test
-
-  #     - name: 📊 Upload report
-  #       uses: actions/upload-artifact@v4
-  #       if: always()
-  #       with:
-  #         name: playwright-report
-  #         path: playwright-report/
-  #         retention-days: 30
 
   deploy:
     name: 🚀 Deploy
