--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8.12.1
+      - run: pnpm i --frozen-lockfile
+
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -52,6 +57,11 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8.12.1
+      - run: pnpm i --frozen-lockfile
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v4
