--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "keccak256": "^1.0.6",
     "lucide-react": "^0.365.0",
     "merkletreejs": "^0.3.11",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
