--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "ryuji-blog",
+  "name": "shachilog",
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -11,7 +10,7 @@
     "lint:fix": "next lint && eslint ./src --fix",
     "lint": "eslint .",
     "typecheck": "tsc",
-    "setup": "pnpm build && prisma generate && prisma migrate deploy && prisma db seed"
+    "setup": "yarn build && prisma generate && prisma migrate deploy && prisma db seed"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -84,6 +83,6 @@
     "tailwind-scrollbar": "^3.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.3",
-    "typescript": "^5"
+    "typescript": "^5.4.0"
   }
 }
