--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "shachilog",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
+  "sideEffects": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint:debug": "eslint ./src --debug",
-    "lint:fix": "next lint && eslint ./src --fix",
+    "lint:fix": "eslint ./src --fix",
     "lint": "eslint .",
     "typecheck": "tsc",
     "setup": "yarn build && prisma generate && prisma migrate deploy && prisma db seed"
@@ -29,6 +31,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/themes": "^3.0.2",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@tremor/react": "^3.15.0",
     "@vercel/analytics": "^1.2.2",
     "autoprefixer": "10.4.19",
@@ -63,26 +66,32 @@
     "tailwindcss-radix-colors": "^1.2.0",
     "tocbot": "^4.27.19",
     "viem": "^2.9.13",
-    "wagmi": "^2.5.19"
+    "wagmi": "^2.5.19",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@epic-web/config": "^1.12.0",
+    "@eslint/compat": "^1.1.1",
     "@faker-js/faker": "^8.4.1",
+    "@flydotio/dockerfile": "^0.5.8",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "8.57.0",
     "eslint-config-kentcdodds": "^21.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-access": "^2.1.2",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^3.1.0",
+    "prettier": "^3.3.3",
     "prisma": "^5.12.1",
     "tailwind-scrollbar": "^3.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.3",
     "typescript": "^5.4.0"
-  }
+  },
+  "prettier": "@epic-web/config/prettier"
 }
