--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "eslint-config-next": "14.2.3",
     "ethers": "^6.11.1",
     "framer-motion": "^11.0.25",
