--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "format": "prettier --write .",
     "lint:debug": "eslint ./src --debug",
     "lint:fix": "eslint ./src --fix",
     "lint": "eslint .",
     "typecheck": "tsc",
-    "setup": "yarn build && prisma generate && prisma migrate deploy && prisma db seed"
+    "setup": "yarn build && prisma generate && prisma migrate deploy && prisma db seed",
+    "prisma:studio": "prisma studio"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
