--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ next-env.d.ts
 /prisma/dev.db
 /prisma/dev.db-journal
 /tests/prisma
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
