--- a/other/litefs.yml
+++ b/other/litefs.yml
@@ -26,7 +26,7 @@ lease:
 
   consul:
     url: '${FLY_CONSUL_URL}'
-    key: 'thank-you-token-litefs/${FLY_APP_NAME}'
+    key: 'shachilog-litefs/${FLY_APP_NAME}'
 
 exec:
   - cmd: npx prisma migrate deploy
