--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "lint:fix": "eslint ./src --fix",
     "lint": "eslint .",
     "typecheck": "tsc",
+    "start:mocks": "cross-env NODE_ENV=production MOCKS=true tsx .",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "test:e2e:dev": "playwright test --ui",
+    "test:e2e:run": "cross-env CI=true playwright test",
     "setup": "yarn build && prisma generate && prisma migrate deploy && prisma db seed",
     "prisma:studio": "prisma studio"
   },
@@ -39,6 +44,7 @@
     "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -75,26 +81,37 @@
   "devDependencies": {
     "@epic-web/config": "^1.12.0",
     "@eslint/compat": "^1.1.1",
-    "@faker-js/faker": "^8.4.1",
+    "@faker-js/faker": "^9.0.3",
     "@flydotio/dockerfile": "^0.5.8",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@playwright/test": "^1.48.0",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/typography": "^0.5.12",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "2.1.2",
+    "enforce-unique": "^1.3.0",
     "eslint": "8.57.0",
     "eslint-config-kentcdodds": "^21.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-access": "^2.1.2",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^3.1.0",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "prisma": "^5.15.0",
     "tailwind-scrollbar": "^3.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.3",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.1.2"
   },
   "prettier": "@epic-web/config/prettier"
 }
